fix overlay z-index

--- a/style/index.less
+++ b/style/index.less
@@ -311,7 +311,7 @@ body > div {
 	}
 	
 	&.overlay {
-		z-index: 2;
+		z-index: 3;
 		background: @overlaybg;
 		overflow: auto;
 		
